tests/cases/error/error-missing-include.rapt
# line 1
INCLUDE missing-file
# line 3