tests/cases/error/error-missing-include.out
error: Error while evaluating INCLUDE
 --> error-missing-include.rapt:1:1
  |
1 | INCLUDE missing-file
  | ^^^^^^^^^^^^^^^^^^^^ Could not open [tests/cases/error/missing-file]: No such file or directory (os error 2)
2 | 
  |
